--- a/config_model_download.yml
+++ b/config_model_download.yml
@@ -3,16 +3,17 @@
 #data_format: 1 # near-surface time series
 data_format: 2 # 2D near-surface data fields
 #data_format: 3 # 3D data fields
-#data_format: 4 # cross section 
-#data_format: 5 # pressure levels
+#data_format: 4 # vertical cross section
+#data_format: 5 # horizontal near-surface section
+#data_format: 6 # pressure levels
 #
-start_day: "2022-05-03"
-end_day: "2022-05-07"
+start_day: "2022-09-11"
+end_day: "2022-09-18"
 save_daily_files: True # if True, data from end_day gets saved; if False, times after end_day are not included
 #
-check_plot: False # switch to enable first opening a plot to check that the correct area/points were selected
+check_plot: True # switch to enable first opening a plot to check that the correct area/points were selected
 #
-out_path: "./model_data" # don't give a file extension!!! The files will automatically be saved as .nc! If save_daily_files == True, the day will automatically be appended to the filename like "./model_data_20220506.nc"
+out_path: "/Users/lukasf/Desktop/AA_test" # don't give a file extension!!! The files will automatically be saved as .nc! If save_daily_files == True, the day will automatically be appended to the filename like "./model_data_resolution_20220506.nc"
 #
 start_h: 0 # (Python) index defining the first time step downloaded from each file. start_h = 0 means starting with the first available time step from each data file.
 num_h: 3 # Number of time steps to download from each file. num_h = 3 means that 3 time steps are downloaded from each file
@@ -22,7 +23,7 @@ int_f: 3 # Time interval in hours between each data file (3 hours)
 stations: # the station settings are only used when downloading timeseries or profile data
   LYR:
     lat: 78.246
-    lon: 15.000
+    lon: 15.504
   IR:
     lat: 78.062
     lon: 13.617
@@ -31,12 +32,12 @@ stations: # the station settings are only used when downloading timeseries or pr
     lon: 16.451
 #
 area: # the area settings are only used when downloading 2D nearsurface fields, 3D data or pressure level data
-  lat_min: 78.4
-  lat_max: 78.7
-  lon_min: 15.0
-  lon_max: 17.0
+  lat_min: 77.9
+  lat_max: 78.8
+  lon_min: 13.5
+  lon_max: 17.
 #
-crosssection: # the start and end point settings are only used when downloading a cross section
+section: # the start and end point settings are only used when downloading a cross section or a near-surface horizontal section
   start_lat: 78.6
   start_lon: 16.0
   end_lat: 78.5
@@ -51,7 +52,7 @@ pressure_levels: # the pressure level settings are only used when downloading pr
 #
 variables:
    T: True
-   Humidity: True
+   Humidity: False
    wind: True
    p_surf: False
    T_surf: False
@@ -63,7 +64,7 @@ variables:
    ABL_height: False
    precip: False
 #
-static_file: "./AA_static_fields" # Full path (absolute or relative) of the file with the static model fields. This file can be downloaded with the function "download_static_fields". For AROME-Arctic: Depending on which resolution is specified below, the actual file will be called "./AA_static_fields_2p5km.nc" or "./AA_static_fields_500m.nc"
+static_file: "/Users/lukasf/Desktop/AA_static_fields" # Full path (absolute or relative) of the file with the static model fields. This file can be downloaded with the function "download_static_fields". For AROME-Arctic: Depending on which resolution is specified below, the actual file will be called "./AA_static_fields_2p5km.nc" or "./AA_static_fields_500m.nc"
 model: "AA" # Switch to distinguish between the Arome-Arctic model for Svalbard ("AA") and the METCoOp model for mainland Norway ("MC")
 #
 int_x: 1
