--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,29 @@
 matplotlib==3.5
-glob2
-jupyter
-seabird
+glob2==0.7
+jupyter==1.0
+seabird==0.11
 numpy==1.23
-scipy
+scipy==1.9
 pandas==1.2
-geopandas
-proj
-shapely
-netCDF4
-cartopy
-gsw
-cmocean
-requests
-adjusttext
-spyder
-xarray
-rioxarray
-dask
-utm
-git
-pip
-metpy
-windrose
-yaml
-nco
-seaborn
-spectrum
+geopandas==0.11
+proj==9.1
+shapely==1.8
+netCDF4==1.6
+cartopy==0.21
+gsw==3.4
+cmocean==2.0
+requests==2.28
+adjusttext==0.7
+spyder==5.3
+xarray==2022.6
+rioxarray==0.12
+dask==2022.8
+utm==0.7
+git==2.38
+pip==22.2
+metpy==1.3
+windrose==1.8
+yaml==0.2
+nco==5.1
+seaborn==0.12
+spectrum==0.8
