--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 matplotlib==3.5
 glob2==0.7
 jupyter==1.0
-seabird==0.11
+seabird
 numpy==1.23
 scipy==1.9
 pandas==1.2
@@ -13,7 +13,7 @@ cartopy==0.21
 gsw==3.4
 cmocean==2.0
 requests==2.28
-adjusttext==0.7
+adjusttext
 spyder==5.3
 xarray==2022.6
 rioxarray==0.12
@@ -23,7 +23,7 @@ git==2.38
 pip==22.2
 metpy==1.3
 windrose==1.8
-yaml==0.2
+yaml
 nco==5.1
 seaborn==0.12
-spectrum==0.8
+spectrum
