--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,29 @@
-matplotlib==3.5
-glob2
-jupyter
-seabird
-numpy==1.23
+matplotlib
+notebook
+nb_conda_kernels
+numpy
 scipy
-pandas==1.2
+pandas
 geopandas
-proj
 shapely
 netCDF4
 cartopy
-gsw
 cmocean
-requests
-adjusttext
 xarray
 rioxarray
 dask
-utm
 git
 pip
 metpy
-windrose
 yaml
-nco
-seaborn
+threddsclient
+gsw
+adjusttext
 spectrum
 pytmd
 pytide
 plotly
 dask-labextension
-threddsclient
+windrose
+seaborn
+glob2
