Hotfix requirements.txt
Version for matplotlib, pandas, array added

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-matplotlib
+matplotlib==3.9.2
 notebook
 nb_conda_kernels
 numpy
 scipy
-pandas
+pandas==2.2.2
 geopandas
 shapely
 netCDF4
 cartopy
 cmocean
-xarray
+xarray==2024.9.0
 rioxarray
 dask
 git
