--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,6 @@ python_requires = >=3.8
 install_requires =
     matplotlib
     notebook
-    nb_conda_kernels
     numpy
     scipy
     pandas
@@ -51,6 +50,10 @@ install_requires =
     seaborn
     glob2
     ephem
+    pyrsktools
+    uptide
+    seabird
+    sounddevice
 
 [options.packages.find]
 exclude =
@@ -64,3 +67,4 @@ dev =
     black
     flake8
     isort
+    nb_conda_kernels
