--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ install_requires =
     uptide
     seabird
     sounddevice
+    pyarrow
 
 [options.packages.find]
 exclude =
@@ -65,3 +66,6 @@ dev =
     flake8
     isort
     nb_conda_kernels
+    git
+    pip
+    yaml
